--- a/requirements.txt
+++ b/requirements.txt
@@ -1,217 +1,127 @@
-aniso8601==9.0.1
-anyio==3.5.0
-apturl==0.5.2
-async-generator==1.10
-attrs==21.4.0
-autopep8==1.6.0
-Babel==2.8.0
-bcrypt==3.2.0
-beautifulsoup4==4.10.0
-black==21.10b0
-blinker==1.4
-Brlapi==0.8.3
-Brotli==1.0.9
-cachetools==5.0.0
-certifi==2020.6.20
+ansi2html==1.8.0
+anyio==3.7.1
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asttokens==2.2.1
+async-lru==2.0.3
+attrs==23.1.0
+Babel==2.12.1
+backcall==0.2.0
+beautifulsoup4==4.12.2
+bleach==6.0.0
+certifi==2023.5.7
 cffi==1.15.1
-chardet==4.0.0
-charset-normalizer==2.0.6
-chrome-gnome-shell==0.0.0
-click==8.0.3
-cmakelint==1.4.2
-codespell==2.2.2
-colorama==0.4.4
-command-not-found==0.3
-commonmark==0.9.1
-cov-core==1.15.0
-coverage==6.2
-cPython==0.0.6
-cryptography==3.4.8
-cupshelpers==1.0
-dbus-python==1.2.18
-defer==1.0.6
-distlib==0.3.6
-distro==1.7.0
-distro-info===1.1build1
-dnspython==2.2.1
-ds4drv==0.5.1
-duplicity==0.8.21
-evdev==1.4.0
-eventlet==0.24.1
-execnet==1.9.0
-fasteners==0.14.1
-filelock==3.10.6
-flake8==4.0.1
-Flask==1.0.2
-Flask-Cors==3.0.7
-Flask-Login==0.4.1
-flask-mongoengine==0.9.5
-flask-restplus==0.12.1
-Flask-WTF==1.0.1
-future==0.18.2
-google-api-core==2.7.2
-google-api-python-client==2.46.0
-google-auth==2.6.6
-google-auth-httplib2==0.1.0
-google-images-download==2.5.0
-googleapis-common-protos==1.56.0
-greenlet==1.1.2
-h11==0.13.0
-html5lib==1.1
-httpcore==0.14.5
-httplib2==0.20.2
-httpx==0.22.0
-idna==3.3
-imageio==2.19.3
-importlib-metadata==4.6.4
-iniconfig==1.1.1
-isort==5.6.4
+charset-normalizer==3.2.0
+click==8.1.4
+comm==0.1.3
+contourpy==1.1.0
+cycler==0.11.0
+dash==2.11.1
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+debugpy==1.6.7
+decorator==5.1.1
+defusedxml==0.7.1
+docopt==0.6.2
+exceptiongroup==1.1.2
+executing==1.2.0
+fastjsonschema==2.17.1
+Flask==2.2.5
+fonttools==4.40.0
+fqdn==1.5.1
+idna==3.4
+ipykernel==6.24.0
+ipython==8.14.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.7
+isoduration==20.11.0
 itsdangerous==2.1.2
-jeepney==0.7.1
+jedi==0.18.2
 Jinja2==3.1.2
-jsonschema==4.6.0
-keyring==23.5.0
-language-selector==0.1
-latexcodec==2.0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-libevdev==0.5
-livereload==2.6.3
-lockfile==0.12.2
-louis==3.20.0
-lxml==4.8.0
-macaroonbakery==1.3.1
-Mako==1.1.3
-Markdown==3.3.6
-MarkupSafe==2.0.1
-mccabe==0.6.1
-meson==0.61.2
-mkdocs==1.1.2
-mongoengine==0.24.1
-monotonic==1.6
-more-itertools==8.10.0
-msgpack==1.0.4
-mutagen==1.45.1
-mypy==0.942
-mypy-extensions==0.4.3
-nala==0.11.1
-netifaces==0.11.0
-networkx==2.8.3
-nose2==0.9.2
-numpy==1.22.4
-oauth2client==4.1.3
-oauthlib==3.2.0
-olefile==0.46
-outcome==1.1.0
-packaging==21.3
-pagelabels==1.2.0
-paramiko==2.9.3
-pathspec==0.9.0
-pdfrw==0.4
+joblib==1.3.1
+json5==0.9.14
+jsonpointer==2.4
+jsonschema==4.18.0
+jsonschema-specifications==2023.6.1
+jupyter-dash==0.4.2
+jupyter-events==0.6.3
+jupyter-lsp==2.2.0
+jupyter_client==8.3.0
+jupyter_core==5.3.1
+jupyter_server==2.7.0
+jupyter_server_terminals==0.4.4
+jupyterlab==4.0.2
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.8
+jupyterlab_server==2.23.0
+kiwisolver==1.4.4
+MarkupSafe==2.1.3
+matplotlib==3.7.2
+matplotlib-inline==0.1.6
+mistune==3.0.1
+nbclassic==1.0.0
+nbclient==0.8.0
+nbconvert==7.6.0
+nbformat==5.9.1
+nest-asyncio==1.5.6
+notebook==6.5.4
+notebook_shim==0.2.3
+numpy==1.25.1
+overrides==7.3.1
+packaging==23.1
+pandas==2.0.3
+pandocfilters==1.5.0
+parso==0.8.3
 pexpect==4.8.0
-Pillow==9.0.1
-platformdirs==2.5.1
-plotly==5.11.0
-pluggy==0.13.0
-prompt-toolkit==3.0.30
-protobuf==3.12.4
-psutil==5.9.0
+pickleshare==0.7.5
+Pillow==10.0.0
+platformdirs==3.8.1
+plotly==5.15.0
+prometheus-client==0.17.0
+prompt-toolkit==3.0.39
+psutil==5.9.5
 ptyprocess==0.7.0
-py==1.10.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pybtex==0.24.0
-pycairo==1.20.1
-pycodestyle==2.8.0
+pure-eval==0.2.2
 pycparser==2.21
-pycryptodomex==3.11.0
-pycups==2.0.1
-PyDrive==1.3.1
-pyflakes==2.4.0
-pygame==2.3.0
-Pygments==2.12.0
-PyGObject==3.42.1
-pyinotify==0.9.6
-PyJWT==2.3.0
-pymacaroons==0.13.0
-pymongo==4.1.1
-PyMuPDF==1.20.2
-PyNaCl==1.5.0
-pynvim==0.4.3
-pyOpenSSL==21.0.0
-pyparsing==2.4.7
-pyperclip==1.8.2
-pyRFC3339==1.1
-pyrsistent==0.18.1
-PySocks==1.7.1
-pytest==6.2.5
-pytest-cov==3.0.0
-pytest-forked==1.4.0
-pytest-sugar==0.9.4
-pytest-xdist==2.5.0
-python-apt==2.4.0+ubuntu1
-python-dateutil==2.8.1
-python-debian===0.1.43ubuntu1
-python-magic==0.4.24
-pytz==2022.1
-pyudev==0.23.2
-PyWavelets==1.3.0
-pyxattr==0.7.2
-pyxdg==0.27
-PyYAML==5.4.1
-radian==0.6.3
-rchitect==0.3.36
-reportlab==3.6.8
-requests==2.25.1
-rfc3986==1.5.0
-rich==11.2.0
-roman==3.3
-rsa==4.8
-scikit-image==0.19.2
-scipy==1.8.1
-screen-resolution-extra==0.0.0
-SecretStorage==3.3.1
-selenium==4.2.0
-setproctitle==1.2.2
-shellingham==1.4.0
+Pygments==2.15.1
+pyparsing==3.0.9
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+pytz==2023.3
+PyYAML==6.0
+pyzmq==25.1.0
+referencing==0.29.1
+requests==2.31.0
+retrying==1.3.4
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.8.10
+scikit-learn==1.3.0
+scipy==1.11.1
+seaborn==0.12.2
+Send2Trash==1.8.2
 six==1.16.0
-sniffio==1.2.0
-socksio==1.0.0
-sortedcontainers==2.4.0
-soupsieve==2.3.1
-speedtest-cli==2.1.3
-SQLAlchemy==1.4.31
-systemd-python==234
-tenacity==8.1.0
-termcolor==1.1.0
-termpdf.py @ file:///home/deodato/termpdf.py
-tifffile==2022.5.4
-toml==0.10.2
-tomli==1.2.2
-tornado==6.1
-trio==0.21.0
-trio-websocket==0.9.2
-typed-ast==1.4.3
-typer==0.4.0
-typing-extensions==3.10.0.2
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufw==0.36.1
-unattended-upgrades==0.1
-uritemplate==4.1.1
-urllib3==1.26.5
-usb-creator==0.3.7
-vboxapi==1.0
-virtualenv==20.21.0
-wadllib==1.3.6
-wcwidth==0.2.5
+sniffio==1.3.0
+soupsieve==2.4.1
+stack-data==0.6.2
+tenacity==8.2.2
+terminado==0.17.1
+threadpoolctl==3.1.0
+tinycss2==1.2.1
+tomli==2.0.1
+tornado==6.3.2
+traitlets==5.9.0
+typing_extensions==4.7.1
+tzdata==2023.3
+uri-template==1.3.0
+urllib3==2.0.3
+wcwidth==0.2.6
+webcolors==1.13
 webencodings==0.5.1
-websockets==9.1
-Werkzeug==2.1.2
-wsproto==1.1.0
-WTForms==3.0.1
-xdg==5
-xkit==0.0.0
-yt-dlp==2022.4.8
-zipp==1.0.0
+websocket-client==1.6.1
+Werkzeug==2.2.3
+widgetsnbextension==4.0.8
+xgboost==1.7.6
+yarg==0.1.9
